--- a/project/prepros-6.config
+++ b/project/prepros-6.config
@@ -25,7 +25,10 @@
       "path": "sass/styles.sass",
       "imports": [
         "sass/lib/_variables.sass",
-        "sass/_tables.sass"
+        "sass/base/_normalize.scss",
+        "sass/base/_typography.sass",
+        "sass/components/_buttons.sass",
+        "sass/components/_tables.sass"
       ]
     }
   ],
