--- a/project/prepros-6.config
+++ b/project/prepros-6.config
@@ -25,10 +25,13 @@
       "path": "sass/styles.sass",
       "imports": [
         "sass/lib/_variables.sass",
+        "sass/lib/_mixins.sass",
+        "sass/lib/_animations.sass",
         "sass/base/_normalize.scss",
         "sass/base/_typography.sass",
         "sass/components/_buttons.sass",
-        "sass/components/_tables.sass"
+        "sass/components/_tables.sass",
+        "sass/layout/global.sass"
       ]
     }
   ],
